--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <div class="about-descr">
 
             <p class="p-heading">Acerca de nosotros </p>
-            <p class="separator">Somos una startup joven creada por estudiantes universitarios del area tecnologica. Con alta vocacion regional. Perseguimos el objetivo de satifascer las necesidades tecnologicas  de nuestros clientes.</p>
+            <p class="separator">Somos una empresa joven que contamos con profesionales para cada especialidad. Con el único objetivo de solucionar los problemas de nuestros clientes.</p>
 
           </div>
 
