Se actualizaron datos de contacto

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
               <ul class="contact-details">
                 <li><span>Primera junta 648, San miguel</span></li>
                 <li><span>Buenos Aires, Argentina</span></li>
-                <li><span>11-2829-6699</span></li>
+                <li><span>11-2829-6699(Fernando)/1157297348(Miguel) </span></li>
                 <li><span>ferchucorinaldesi@gmail.com</span></li>
               </ul>
 
